services.yml
apiVersion: v1
kind: Service
metadata:
  name: vite-project
spec:
  selector:
    app: vite-project
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
